add view matrix, additional primitive meshes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 height: 100%;
                 overflow: hidden;
                 display: block;
+                background-color: transparent;
             }
         </style>
     </head>
